<resources>
    <string name="number_only">0123456789</string>
    <string name="number_and_hex_char">0123456789ABCDEFabcdef</string>
    <string name="app_name">BluetoothPunchTimeSystem</string>
    <string name="set_students">All Students</string>
    <string name="system_permission">System Permission</string>
    <string name="no_bt_permission">No Bluetooth Permission</string>
    <string name="system_hardware">System Hardware</string>
    <string name="no_bluetooth_hardware">No Bluetooth Hardware</string>
    <string name="not_turn_on_the_bt_notification">Your Bluetooth is off, make sure your Bluetooth is on.</string>
    <string name="to_turn_on_bt">Go to turn on</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="add_a_student">Add a student</string>
    <string name="input_mac_address">Input Student\'s MAC Address</string>
    <string name="scan">Scan</string>
    <string name="no_permissions_hint">This application need follow permissions, please grant it.</string>
    <string name="exit">Exit</string>
    <string name="scan_bt_device">Scan bluetooth devices</string>
    <string name="no_name">No Name</string>
    <string name="input_student_number">Input Student Number</string>
    <string name="input_first_name">Input Student\'s First Name</string>
    <string name="input_last_name">Input Student\'s Last Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mac_address">MAC Address</string>
    <string name="student_number">Student Number</string>
    <string name="student_data_not_filled_hint">You should filled all data before add, please check follow input field.(%s)</string>
    <string name="edit_student_information">Edit Student Information</string>
    <string name="student_management">Student Management</string>
    <string name="remove_students">Remove Student(s)</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="select_users_to_remove">Select User(s) To Remove</string>
    <string name="no_network_hint">No network, please check your network connection.</string>
    <string name="waiting_for_update_hint">Please waiting for data update until success.</string>
    <string name="add_a_user_success_hint">Add new student successful!</string>
    <string name="edit_a_user_success_hint">Edit student information successful!</string>
    <string name="mac_address_exists">The MAC address is exist.</string>
    <string name="student_number_exists">The student number is exist.</string>
    <string name="unknown_error">Unknown server error.</string>
    <string name="start_new_session">Start New Session</string>
    <string name="all_records">All Records</string>
    <string name="get_student_progress_hint">Loading now …</string>
    <string name="no_student">No Student</string>
    <string name="no_more">No More</string>
    <string name="remove_users_hint">Remove User(s) now...</string>
    <string name="select_your_next_step">Select Your Next Step</string>
    <string name="start_a_new_session">Start A New Session</string>
    <string name="continue_a_exist_session">Continue A Exist Session</string>
    <string name="new_session">New Session</string>
    <string name="is_recording_now_hint">Is Recording now, do you want to exit?</string>
    <string name="is_recording_now_title">Hint</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="set_program">Set Program</string>
    <string name="set_time">Set Time:</string>
    <string name="set_check_frequency">Set Frequency:</string>
    <string name="set_lesson_name">Set Lesson Name:</string>
    <string name="create">Create</string>
    <string name="quit">Quit</string>
    <string name="please_fill_the_name">Please fill the name</string>
    <string name="create_new_session_now">Create new session now…</string>
    <string name="session_info">Lesson name: %s\nLesson create time: %s\nLesson time: %d minutes, scan frequency: %d</string>
    <string name="now_time_hint">Now:%d/%d seconds</string>
    <string name="scan_times_hint">Next scan remaining:%d seconds (%d/%d)</string>
    <string name="finish_hint">Is finish punch time now.</string>
    <string name="txt_back">back</string>
    <string name="no_record">No Record</string>
    <string name="time_and_frequency">Time %d minutes, Frequency %d</string>
    <string name="waiting">Waiting …</string>


</resources>
