<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_add_user"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_black"
        android:orderInCategory="100"
        android:title="@string/add_a_student" />

    <item android:id="@+id/menu_remove_user"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_remove_black"
        android:title="@string/remove_students"/>

    <item
        android:id="@+id/menu_search"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search_black"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

</menu>