<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_margin="@dimen/default_left_and_right_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/set_lesson_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_lesson_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/number_picker_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/set_check_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/number_picker_set_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>